# Martina_Bicchi_7049270

./: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  NotesCollectionImportant.cpp  NotesCollectionImportant.h  NotesCollectionSpecific.cpp  NotesCollectionSpecific.h  Observer.h  Subject.h  main.cpp
test/: CMakeLists.txt  ConcreteObservertest.cpp  NoteCollctionSpecificfixture.cpp  NoteCollectionImportantfixture.cpp  NoteCollectiontest.cpp  Notefixture.cpp  Notetest.cpp  run_tests.cpp
test/lib/googletest-master/googletest/include/gtest/internal/: gtest-internal.h
