cmake_minimum_required(VERSION 3.17)
project(Martina_Bicchi_7049270)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp ConcreteObserver.cpp ConcreteObserver.h Observer.h NotesCollection.cpp NotesCollection.h NotesCollectionImportant.cpp NotesCollectionImportant.h NotesCollectionSpecific.cpp NotesCollectionSpecific.h Note.cpp Note.h Subject.h)